feat(avatar, brand band) add helper classes for default group and profile images (#3356)
* update brand band to add classes for groups and profile pages.
* update avatar to add classes for the 3 different image sizes.

--- a/packages/design-system/ui/components/brand-band/docs.mdx
+++ b/packages/design-system/ui/components/brand-band/docs.mdx
@@ -33,3 +33,11 @@ The brand band comes with 3 sizes — small, medium and large. These will adjust
 If you need to remove the brand band image from the component, you can simply pass in `slds-brand-band_none` to only display the page background color.
 
 <BrandBandExample size="none" />
+
+## Using the group background image
+
+<BrandBandExample size="large" image="group" />
+
+## Using the user profile background image
+
+<BrandBandExample size="large" image="user" />
