chore(merge-summer-to-winter: merge branch 'summer-18' into winter-19 (#3367)

--- a/packages/design-system/ui/components/cards/docs.mdx
+++ b/packages/design-system/ui/components/cards/docs.mdx
@@ -63,7 +63,7 @@ The card header can have an icon, a title and actions. The icon and title are lo
 
 #### Actions row
 
-The actions row of a card header typically accomodates a single action for the object a user is working with, such as creating, editing, or deleting. If there are more than one action, an action overflow menu would be used instead.
+The actions row of a card header typically accommodates a single action for the object a user is working with, such as creating, editing, or deleting. If there are more than one action, an action overflow menu would be used instead.
 
 ##### Single action
 
@@ -103,9 +103,9 @@ The card body accommodates any layout or design, as long as its a grouping of re
   By default, the body of a card does not have padding. Components inside the card will be flush to the left and right edges of the card. If you need to add padding, use the <code className="doc">slds-card__body_inner</code> class on the <code className="doc">slds-card__body</code> element.
 </Blockquote>
 
-#### Default without Padding
+#### Default without padding
 
-For an example of when to use the default behavior, see the [Data Table example](/#With-a-Data-Table).
+For an example of when to use the default behavior, see the [Data Table example](/components/cards/#With-a-Data-Table).
 
 <Example title="Cards Body No Padding">
   <CodeView>
@@ -124,8 +124,7 @@ For an example of when to use the default behavior, see the [Data Table example]
 
 #### With padding
 
-For an example of when to use the `slds-card__body_inner` class, see the [Tiles example](/#With-Tiles).
-
+For an example of when to use the `slds-card__body_inner` class, see the [Tiles example](/components/cards/#With-Tiles).
 
 <Example title="Cards Body With Padding">
   <CodeView>
@@ -195,6 +194,7 @@ The card footer is optional and should _**only**_ have a "View All" link that ta
 </Example>
 
 ## Examples
+
 ### Empty
 
 When a card doesn't have any data, it is represented with the body and footer collapsed by default.
@@ -281,6 +281,7 @@ Placing contact tiles inside of an `slds-card__body` is an example of using `sld
 </Example>
 
 ## Layout
+
 ### Nested Cards
 
 When a card is located inside of another card body, we remove the dropshadow and border of the nested cards. You can opt into adding the border back by applying `slds-card_boundary` to the `slds-card` element.
@@ -354,7 +355,6 @@ Adding `slds-card_boundary` to the `slds-card` element will give you back the ca
 ### Wrapped Cards
 
 To combine several cards into a single card look, wrap the cards using `slds-card-wrapper`. Similar to the nested cards, adding `slds-card_boundary` to the `slds-card` element will give you back the card styling.
-
 
 <Example title="Cards Wrapped" >
   <CodeView>
