fix(icon): prevent oval shape when using x-small size modifiers (#3381)

--- a/packages/design-system/ui/components/icons/docs.mdx
+++ b/packages/design-system/ui/components/icons/docs.mdx
@@ -181,6 +181,8 @@ To change the fill of an icon to the light text color, add the `slds-icon-text-l
 
 ## Size
 
+Size modifiers can be added to the `slds-icon` element on all types of icons.
+
 ### XX-Small
 
 To change the size of an icon to xx-small, add the `slds-icon_xx-small` class to the icon.
