--- a/packages/design-system/ui/components/dueling-picklist/docs.mdx
+++ b/packages/design-system/ui/components/dueling-picklist/docs.mdx
@@ -2,7 +2,7 @@ import CodeView from '../../../shared/components/CodeView';
 import CodeBlock from '../../../shared/components/CodeBlock';
 import Example from '../../../shared/components/Example';
 import Blockquote from '../../../shared/components/Blockquote';
-import { MultiSelect, MultiSelectViewMode, DefaultSnapShot, LockedSnapShot, DisabledSnapShot, SelectedSnapShot, MultiSelectedSnapShot, GrabbedSnapShot, MovedInSnapShot, DroppedSnapShot, MoveToSnapShot, CountriesSnapshot, SelectedCountriesSnapshot, MultipleSelectedCountriesSnapshot, DroppedCountriesSnapshot } from './';
+import { MultiSelect, MultiSelectViewMode, DefaultSnapShot, LockedSnapShot, DisabledSnapShot, SelectedSnapShot, MultiSelectedSnapShot, GrabbedSnapShot, MovedInSnapShot, DroppedSnapShot, MoveToSnapShot, CountriesSnapshot, SelectedCountriesSnapshot, MultipleSelectedCountriesSnapshot, DroppedCountriesSnapshot, Demo } from './';
 import { DoctypeIcon } from '../icons/doctype/example';
 
 <div className="doc lead">
@@ -45,7 +45,7 @@ This component is essentially 2 ARIA listboxes side by side, so we follow the [A
 
 ## Group Label
 
-A Dueling Picklist should have a group label, similar to using a `fieldset` and `legend` on grouped form controls. To achieve this, wrap the Dueling Picklist in an `slds-form-element` and add a `div` with the same class names that are applied to a `legend` element in a fieldset, `slds-form-element__label slds-form-element__legend slds-text-title_caps`.
+A Dueling Picklist should have a group label, similar to using a `fieldset` and `legend` on grouped form controls. To achieve this, wrap the Dueling Picklist in an `slds-form-element` and add a `div` with the same class names that are applied to a `legend` element in a fieldset, `slds-form-element__label slds-form-element__legend`.
 
 <Blockquote header="Labeling the group" type="a11y">
   It is important that the `slds-form-element` `<div>` has the `role="group"` attribute applied, along with `aria-labelledby`, whose value is the ID of the visible group label.
@@ -108,7 +108,7 @@ If the user needs to select multiple options for a field, like a list of languag
 ### Selected Item
 
 <Blockquote header="Aria Selected" type="a11y">
-  <code class="doc">aria-selected</code> should be placed on each <code class="doc">role="option"</code>, and set to <code class="doc">true</code> when the item is selected.
+  <code className="doc">aria-selected</code> should be placed on each <code className="doc">role="option"</code>, and set to <code className="doc">true</code> when the item is selected.
 </Blockquote>
 
 <Example title="Dueling Picklist with Item Selected">
@@ -132,8 +132,8 @@ If the user needs to select multiple options for a field, like a list of languag
 </Blockquote>
 
 <CodeBlock toggleCode={false}>
-  <div class="slds-dueling-list">
-    <div class="slds-assistive-text" id="drag-live-region" aria-live="assertive">
+  <div className="slds-dueling-list">
+    <div className="slds-assistive-text" id="drag-live-region" aria-live="assertive">
       Arabic and German: Moved to Selected Languages.
     </div>
   </div>
@@ -210,16 +210,46 @@ Within a list, users are able to drag and drop an item.
 If the user is not able to interact with the dueling picklist, then it should be marked as disabled.
 
 <Blockquote type="a11y" header="Aria Disabled">
-  In disabled mode, both list boxes <code class="doc">ul[role=listbox]</code> should receive <code class="doc">aria-disabled="true"</code>, and all directional buttons should receive the <code class="doc">disabled</code> attribute.
+  In disabled mode, both list boxes <code className="doc">ul[role=listbox]</code> should receive <code className="doc">aria-disabled="true"</code>, and all directional buttons should receive the <code className="doc">disabled</code> attribute.
 </Blockquote>
 
 <Blockquote type="note" header="Utility Class">
-  The class <code class="doc">slds-is-disabled</code> should also be applied to the divs with the class <code class="doc">slds-dueling-list_options</code>.
+  The class <code className="doc">slds-is-disabled</code> should also be applied to the divs with the class <code className="doc">slds-dueling-list_options</code>.
 </Blockquote>
 
 <Example title="Dueling Picklist Disabled">
   <CodeView>
     <MultiSelect dataSet={DisabledSnapShot} disabled />
+  </CodeView>
+</Example>
+
+### Required
+
+<Example title="Dueling Picklist with Required Indicator">
+  <CodeView>
+    <MultiSelect dataSet={DefaultSnapShot} isRequired />
+  </CodeView>
+</Example>
+
+### With Tooltip
+
+If some contextual information regarding the dueling picklist is needed, add a tooltip next to the group label.
+
+<Example title="Dueling Picklist with Tooltip">
+  <CodeView>
+    <Demo>
+      <MultiSelect dataSet={DefaultSnapShot} hasTooltip />
+    </Demo>
+  </CodeView>
+</Example>
+
+### Required With Tooltip
+
+<Example title="Dueling Picklist with Required Indicator and Tooltip">
+  <CodeView>
+    <Demo>
+      <MultiSelect dataSet={DefaultSnapShot} isRequired hasTooltip />
+    </Demo>
   </CodeView>
 </Example>
 
