fix(form-element): clean up ids and classnames (#3414)

--- a/packages/design-system/ui/components/form-element/docs.mdx
+++ b/packages/design-system/ui/components/form-element/docs.mdx
@@ -199,7 +199,7 @@ By adding the class `slds-form_horizontal` to top level `slds-form` element, you
 
 <Example title="Form Element - Record Detail - View Mode - Horizontal">
   <CodeView>
-    <RecordDetail className="slds-form_horizontal" snapshot={Snapshot.ObjectFieldTypes} isViewMode direction="horizontal" />
+    <RecordDetail snapshot={Snapshot.ObjectFieldTypes} isViewMode direction="horizontal" />
   </CodeView>
 </Example>
 
@@ -223,6 +223,6 @@ The form content found inside of `slds-form-element__control` should be replaced
 ##### Horizontal Alignment
 <Example title="Form Element - Record Detail - Edit Mode - Horizontal">
   <CodeView>
-    <RecordDetail className="slds-form_horizontal" snapshot={Snapshot.ObjectFieldTypes} direction="horizontal" />
+    <RecordDetail snapshot={Snapshot.ObjectFieldTypes} direction="horizontal" />
   </CodeView>
 </Example>
