fix(builder-header): resolve ie11 flex issue (#3520)

--- a/packages/design-system/ui/components/builder-header/docs.mdx
+++ b/packages/design-system/ui/components/builder-header/docs.mdx
@@ -3,6 +3,7 @@ import CodeBlock from '../../../shared/components/CodeBlock';
 import Example from '../../../shared/components/Example';
 import Blockquote from '../../../shared/components/Blockquote';
 import BuilderHeader from './index.jsx';
+import style from './docs/index.scss';
 
 <div className="doc lead">
   Every builder needs a builder header, which contains basic navigation elements. It also shows the builder type and content name.
